--- a/list.html
+++ b/list.html
@@ -15,14 +15,12 @@
 					<!-- <label for="groceryItemInput">Enter Grocery Item</label> -->
 					<input type="text" class="form-control" id="grocery-item-input" placeholder="Enter Grocery Item">
 				</div>
-				<button class="btn btn-primary">Add</button>
+				<button class="btn btn-primary">Add To List</button>
 			</form>
 		</div>
 		
-		<div id="grocery-line-item" style="padding: 1em;">
-			<button class="btn btn-danger">Delete</button>
-			<button class="btn btn-primary">Got It!</button>
-			<span id="grocery-item"></span>
+		<div id="grocery-list" style="padding: 1em;">
+			<div id="grocery-item"></div>
 		</div>
 	</body>		
 </html>
